<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".Accueil">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="42dp"
        android:gravity="center"
        android:text="@string/titleAccueil"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dateCard"
        android:onClick="showDatePicker"
        style="@style/Card"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <TextView
            android:id="@+id/textViewLe"
            style="@style/CardInside.left"
            android:text="@string/le"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="42dp" />

        <TextView
            android:id="@+id/bDate"
            style="@style/CardInside.right"
            android:text="@string/defaultDate"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/startTimeCard"
        android:onClick="showTimePicker"
        style="@style/Card"
        app:layout_constraintTop_toBottomOf="@+id/dateCard">

        <TextView
            android:id="@+id/textViewEntre"
            style="@style/CardInside.left"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
            android:text="@string/entre"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/bStartTime"
            style="@style/CardInside.right"
            android:text="@string/defaultTime"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/endTimeCard"
        android:onClick="showTimePicker"
        style="@style/Card"
        app:layout_constraintTop_toBottomOf="@+id/startTimeCard">

        <TextView
            android:id="@+id/textViewEt"
            style="@style/CardInside.left"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
            android:text="@string/et"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/bEndTime"
            style="@style/CardInside.right"
            android:text="@string/defaultTime"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="center"
        app:showDivider="middle"
        app:dividerDrawable="@drawable/divider_chip" />

    <Button
        android:id="@+id/bOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="lookForFreeRoom"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeCard" />

</LinearLayout>